ont-api: change to new paradigm (warning: failed tests)